--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_native_admob: ^2.1.0+3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
