--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: willpop_admob
 description: WillPopAdmob
 version: 0.0.1
-author:
-homepage:
+repository: https://github.com/stard5/willpop_admob
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
