package name 변경

--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>willpop.admob.example</string>
+	<string>will_pop_admob_example</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -41,9 +41,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>GADApplicationIdentifier</key>
-	<string>ca-app-pub-6558139581290888~8308848255</string>
-    <key>io.flutter.embedded_views_preview</key>
-    <true/>
 </dict>
 </plist>
