--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: willpop_admob_example
-description: Demonstrates how to use the willpop_admob plugin.
+name: will_pop_admob_example
+description: Demonstrates how to use the will_pop_admob plugin.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -14,9 +14,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  willpop_admob:
+  will_pop_admob:
     # When depending on this package from a real application you should use:
-    #   willpop_admob: ^x.y.z
+    #   will_pop_admob: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
